# Basic-data-structures

./: .gitignore
BinaryTree/: CMakeLists.txt  main.cpp  start.sh  test.cpp
BinaryTree/treelib/: CMakeLists.txt  lib.cpp  lib.hpp
HashTable/: CMakeLists.txt  hash_tab.cpp  hash_tab.py  test.cpp
HashTable/HashtabLibrary/: CmakeLists.txt  hash.cpp  hash.hpp
List/: CMakeLists.txt  test.cpp
List/lib/: CMakeLists.txt  list.cpp  list.hpp
ProcessesBuffer/: CMakeLists.txt  cleanup_shm  cleanup_shm.cpp  consumer  consumer.cpp  debug_compile.sh  init_shm  init_shm.cpp  kill_consumers.sh  kill_producers.sh  lib.cpp  lib.hpp  print.cpp  producer  producer.cpp  start.sh
ProcessesBuffer/lib/: lib.cpp  lib.hpp
ProcessesBuffer/old/: compile.sh  debug_compile.sh  no_debug_compile.sh
ProcessesBuffer/scripts/: consuments.sh  end_work.sh  gdb_new_start.sh  intense_special_mess.sh  kill_consumers.sh  kill_producers.sh  new_start.sh  one_producer.sh  start.sh
ProcessesBuffer/src/: cleanup_shm.cpp  consumer.cpp  init_shm.cpp  producer.cpp
Queue/: CMakeLists.txt  queue_lib.hpp
Queue/lib/: deque_lib.cpp  deque_lib.hpp
Queue/src/: main.cpp
Queue/test/: test.cpp
ThreadsBuffer/: CMakeLists.txt
ThreadsBuffer/scripts/: monitor_normal.sh  monitor_test.sh  monitor_veryslow.sh  monitor_veryslow_special.sh  semaphore_normal.sh  semaphore_test.sh  semaphore_veryslow.sh  semaphore_veryslow_special.sh
ThreadsBuffer/source/: buffer2consResolved.cpp  buffers_monitor.cpp  buffers_monitor_overwriting copy.cpp  buffers_monitor_overwriting1.cpp  buffers_monitor_overwriting1_final.cpp  buffers_semaphore.cpp  buffers_semaphore_copy.cpp  buffers_semaphore_new.cpp  zadanie.cpp  zadanie5.cpp  zadanie_copy.cpp  zadanie_working.cpp
